--- a/neural-style-transfer.ipynb
+++ b/neural-style-transfer.ipynb
@@ -9,6 +9,7 @@
     }
    },
    "source": [
+    "## Implementation of Neural style transfer\n",
     "References:\n",
     "- https://arxiv.org/pdf/1508.06576.pdf\n",
     "- https://keras.io/examples/neural_style_transfer/"
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:50.715796Z",
@@ -25,21 +26,49 @@
    },
    "outputs": [],
    "source": [
+    "# Set paths to your files\n",
     "content_image_path = './content_image.jpg'\n",
     "style_image_path = './style_image.jpg'\n",
-    "output_image_path = './generated_image.jpg'"
+    "output_image_path = './generated_image.jpg'\n",
+    "\n",
+    "# which VGG19 layers to user for style cost\n",
+    "style_layers_names = [\n",
+    "    ('block1_conv1'),\n",
+    "    ('block2_conv1'),\n",
+    "    ('block3_conv1'),\n",
+    "    ('block4_conv1'),\n",
+    "    ('block5_conv1')]\n",
+    "\n",
+    "# component weights in loss function\n",
+    "total_variation_weight = 2e2\n",
+    "style_weight = 1e2\n",
+    "content_weight = 7.5e0\n",
+    "\n",
+    "# num of iterations for optimization\n",
+    "iters = 20\n",
+    "\n",
+    "# number of rows for the generated picture\n",
+    "img_nrows = 300"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:51.508117Z",
      "start_time": "2020-04-30T11:56:51.500580Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.applications import VGG19\n",
     "from keras.preprocessing.image import load_img, save_img\n",
@@ -56,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:52.145544Z",
@@ -66,6 +95,9 @@
    "outputs": [],
    "source": [
     "def noise_image(content_image, img_nrows, img_ncols, noise_ratio=.3):\n",
+    "    \"\"\"\n",
+    "    Given a content image tensor add random noise and return image\n",
+    "    \"\"\"\n",
     "    noise_image = np.random.uniform(-20, 20, (1, img_nrows, img_ncols, 3)).astype('float32')\n",
     "    input_image = noise_image * noise_image * noise_ratio + content_image * (1 - noise_ratio)\n",
     "    return input_image"
@@ -73,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:52.618698Z",
@@ -83,12 +115,16 @@
    "outputs": [],
    "source": [
     "def compute_content_cost(content_activation, generated_content_activation):\n",
+    "    \"\"\"\n",
+    "    Given the content activation and generated picture activation of the same conv layer\n",
+    "    return cost over all elements\n",
+    "    \"\"\"\n",
     "    return K.sum(K.square(generated_content_activation - content_activation))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:52.853943Z",
@@ -97,7 +133,10 @@
    },
    "outputs": [],
    "source": [
-    "def gram_matrix(A):  \n",
+    "def gram_matrix(A):\n",
+    "    \"\"\"\n",
+    "    Given a tensor return the gram matrix\n",
+    "    \"\"\"\n",
     "    features = K.batch_flatten(K.permute_dimensions(A, (2, 0, 1)))\n",
     "    gram = K.dot(features, K.transpose(features))\n",
     "    return gram"
@@ -105,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:53.043825Z",
@@ -114,17 +153,21 @@
    },
    "outputs": [],
    "source": [
-    "def compute_layer_style_cost(a_S, a_G):  \n",
+    "def compute_layer_style_cost(style_activation, generated_activation):\n",
+    "    \"\"\"\n",
+    "    Given the style activation and generated picture activation of the same conv layer\n",
+    "    return the loss as distance of the gram matrices of both activations\n",
+    "    \"\"\"\n",
     "    W, H, C = img_ncols, img_nrows, 3\n",
-    "    GS = gram_matrix(a_S)\n",
-    "    GG = gram_matrix(a_G)\n",
+    "    GS = gram_matrix(style_activation)\n",
+    "    GG = gram_matrix(generated_activation)\n",
     "    factor = 1. / float(2 * C * H * W) ** 2\n",
     "    return factor * K.sum(K.square(GG - GS))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:53.223416Z",
@@ -133,8 +176,12 @@
    },
    "outputs": [],
    "source": [
-    "def compute_style_cost(style_layers, generated_image):\n",
-    "    # intiialize loss\n",
+    "def compute_style_cost(style_layers):\n",
+    "    \"\"\"\n",
+    "    Given the activation of multiple conv layers\n",
+    "    return the weighted sum of the individual style layer cost\n",
+    "    \"\"\"\n",
+    "    # intialize loss\n",
     "    J_style = 0\n",
     "    # all layers are equally weighted (simple)\n",
     "    layer_weight = 1. / len(style_layers)\n",
@@ -152,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:53.392131Z",
@@ -162,6 +209,9 @@
    "outputs": [],
    "source": [
     "def variation_loss(generated_image):\n",
+    "    \"\"\"\n",
+    "    return variation loss given current image generated, smoothes image\n",
+    "    \"\"\"\n",
     "    a = K.square(generated_image[:, :img_nrows-1, :img_ncols-1,\n",
     "                                 :] - generated_image[:, 1:, :img_ncols-1, :])\n",
     "    b = K.square(generated_image[:, :img_nrows-1, :img_ncols-1,\n",
@@ -171,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:53.934960Z",
@@ -186,6 +236,10 @@
     "               total_variation_weight, \n",
     "               style_weight, \n",
     "               content_weight):\n",
+    "    \"\"\"\n",
+    "    given the activation of content layer and style layers for generated and input pics\n",
+    "    return weighted total loss\n",
+    "    \"\"\"\n",
     "    \n",
     "    # 1. Content cost - grab the correct activations from the content tensor\n",
     "    content_activation = content_layers[0, :, :, :]\n",
@@ -193,20 +247,17 @@
     "    J_content = compute_content_cost(content_activation, generated_content_activation)\n",
     "    \n",
     "    # 2. Style cost - compute the syle cost over all style layers\n",
-    "    J_style = compute_style_cost(style_layers, generated_image)\n",
+    "    J_style = compute_style_cost(style_layers)\n",
     "    \n",
     "    # 3. Total variation loss - compute the total variation loss\n",
-    "    v_loss = variation_loss(generated_image)\n",
+    "    J_vloss = variation_loss(generated_image)\n",
     "    \n",
-    "    # Compute weighted sum\n",
-    "    J = content_weight * J_content + style_weight * J_style + total_variation_weight * v_loss\n",
-    "    \n",
-    "    return J"
+    "    return content_weight * J_content + style_weight * J_style + total_variation_weight * J_vloss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:54.270785Z",
@@ -215,16 +266,19 @@
    },
    "outputs": [],
    "source": [
-    "def get_layers(model, STYLE_LAYERS):\n",
+    "def get_layers(model, style_layers_names):\n",
+    "    \"\"\"\n",
+    "    given (VGG19) mode, return the desired style and content layers\n",
+    "    \"\"\" \n",
     "    layers = dict([(layer.name, layer.output) for layer in model.layers])\n",
-    "    content_layers = layers['block4_conv2']\n",
-    "    style_layers = [layers[layer] for layer in STYLE_LAYERS]\n",
+    "    content_layers = layers['block4_conv2'] # hard coded content layer\n",
+    "    style_layers = [layers[layer] for layer in style_layers_names]\n",
     "    return content_layers, style_layers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:54.753384Z",
@@ -236,6 +290,7 @@
     "class Evaluator(object):\n",
     "    \"\"\"\n",
     "    Evaluator class used to track gradients and loss values together\n",
+    "    Reference: https://keras.io/examples/neural_style_transfer/ \n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self):\n",
@@ -265,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:55.546319Z",
@@ -274,8 +329,11 @@
    },
    "outputs": [],
    "source": [
-    "# https://keras.io/examples/neural_style_transfer/\n",
     "def deprocess_image(x):\n",
+    "    \"\"\"\n",
+    "    Remove zero center and reorder to RGB\n",
+    "    Reference: https://keras.io/examples/neural_style_transfer/ \n",
+    "    \"\"\"\n",
     "    x = x.reshape((img_nrows, img_ncols, 3))\n",
     "    # Remove zero-center by mean pixel\n",
     "    x[:, :, 0] += 103.939\n",
@@ -289,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-30T11:56:56.092652Z",
@@ -299,6 +357,9 @@
    "outputs": [],
    "source": [
     "def preprocess_image(path, img_nrows, img_ncols):\n",
+    "    \"\"\"\n",
+    "    given path, load image, scale, exand and perform VGG19 preprocessing\n",
+    "    \"\"\"\n",
     "    img = load_img(path, target_size=(img_nrows, img_ncols))\n",
     "    img = img_to_array(img)\n",
     "    img = np.expand_dims(img, axis=0)\n",
@@ -314,171 +375,25 @@
      "start_time": "2020-04-30T11:58:24.578Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|          | 0/20 [00:00<?, ?it/s]\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  5%|▌         | 1/20 [01:31<28:55, 91.34s/it]\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " 10%|█         | 2/20 [03:07<27:52, 92.89s/it]\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: 3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " 15%|█▌        | 3/20 [04:38<26:08, 92.28s/it]\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: 4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " 20%|██        | 4/20 [06:06<24:16, 91.03s/it]\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: 5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " 25%|██▌       | 5/20 [07:33<22:26, 89.78s/it]\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: 6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " 30%|███       | 6/20 [09:04<21:02, 90.19s/it]\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: 7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " 35%|███▌      | 7/20 [10:36<19:38, 90.63s/it]\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: 8\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " 40%|████      | 8/20 [12:04<17:57, 89.82s/it]\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: 9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "STYLE_LAYERS = [\n",
-    "    ('block1_conv1'),\n",
-    "    ('block2_conv1'),\n",
-    "    ('block3_conv1'),\n",
-    "    ('block4_conv1'),\n",
-    "    ('block5_conv1')]\n",
-    "\n",
-    "total_variation_weight = 2e2\n",
-    "style_weight = 1e2\n",
-    "content_weight = 7.5e0\n",
-    "\n",
-    "\n",
-    "# dimensions of the generated picture.\n",
+    "# get dimensions for output picture\n",
     "width, height = load_img(content_image_path).size\n",
-    "img_nrows = 300\n",
     "img_ncols = int(width * img_nrows / height)\n",
     "\n",
+    "# preprocess content and style picture\n",
     "content_image = preprocess_image(content_image_path, img_nrows, img_ncols)\n",
     "style_image = preprocess_image(style_image_path, img_nrows, img_ncols)\n",
     "\n",
-    "# tensor representations\n",
+    "# generate Keras variables for pictures\n",
     "content_image = K.variable(content_image)\n",
     "style_image = K.variable(style_image)\n",
     "generated_image = K.placeholder((1, img_nrows, img_ncols, 3))\n",
+    "\n",
+    "# initalize cost variable\n",
     "cost = K.variable(0)\n",
     "\n",
-    "# input tensor will concist of c, s and g\n",
+    "# input tensor will concist of c, s and g pics\n",
     "input_tensor = K.concatenate(\n",
     "    [content_image, style_image, generated_image], axis=0)\n",
     "\n",
@@ -486,44 +401,27 @@
     "model = VGG19(input_tensor=input_tensor,\n",
     "              weights='imagenet', include_top=False)\n",
     "\n",
-    "# get layers on which content and syles loss is computed\n",
-    "content_layers, style_layers = get_layers(model, STYLE_LAYERS)\n",
+    "# get layers on which content and styles loss is computed\n",
+    "content_layers, style_layers = get_layers(model, style_layers_names)\n",
+    "\n",
+    "# initialize cost\n",
     "cost = total_cost(content_layers, style_layers,\n",
     "                  generated_image, total_variation_weight, style_weight, content_weight)\n",
+    "\n",
+    "# Initialize gradients, Keras function and Evaluator\n",
     "grads = K.gradients(cost, generated_image)[0]\n",
     "f_outputs = K.function([generated_image], [cost, grads])\n",
-    "\n",
     "evaluator = Evaluator()\n",
     "\n",
-    "# initalize a generated image\n",
-    "generated_img = noise_image(content_image, img_nrows, img_ncols, noise_ratio=0.0)\n",
-    "save_img(output_image_path,\n",
-    "         generated_img[0, :, :, :])\n",
+    "# currently generated image starting point is content image, but can add noise\n",
+    "generated_img = preprocess_image(content_image_path, img_nrows, img_ncols)\n",
     "\n",
-    "gererated_img = preprocess_image(content_image_path, img_nrows, img_ncols)\n",
-    "\n",
-    "for i in tqdm(range(20)):\n",
-    "    print(f'Iteration: {i + 1}')\n",
+    "for i in tqdm(range(iters)):\n",
     "    generated_img, min_val, info = fmin_l_bfgs_b(evaluator.loss, generated_img,\n",
     "                                                 fprime=evaluator.grads, maxfun=20)\n",
     "    img = deprocess_image(generated_img.copy())\n",
-    "    imageio.imwrite(output_image_path, img)\n",
-    "    img = array_to_img(img)"
+    "    imageio.imwrite(output_image_path, img)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -588,5 +486,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
